--- a/app/src/main/res/layout/fragment_add_service_booking.xml
+++ b/app/src/main/res/layout/fragment_add_service_booking.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:backgroundTint="@color/white"
         android:padding="16dp"
         android:src="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +23,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:background="#FFFFFF"
         android:text="FIND YOUR NEAREST DEALER"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -43,8 +41,7 @@
         android:drawableLeft="@drawable/ic_current_location"
         android:text="Current Location"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/tvFindDealer"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/tvFindDealer" />
 
     <TextView
         android:id="@+id/tvOr"
@@ -69,9 +66,9 @@
         <AutoCompleteTextView
             android:id="@+id/acTVselectDivision"
             android:layout_width="match_parent"
-            android:layout_height="68dp"
+            android:layout_height="wrap_content"
             android:inputType="none"
-            android:text="Select Division"
+            android:hint="Select Division"
             android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -88,9 +85,9 @@
         <AutoCompleteTextView
             android:id="@+id/acTVselectDistrict"
             android:layout_width="match_parent"
-            android:layout_height="68dp"
+            android:layout_height="wrap_content"
             android:inputType="none"
-            android:text="Select District"
+            android:hint="Select District"
             android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,11 +102,18 @@
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mvNearestDealer"
-        android:layout_width="414dp"
-        android:layout_height="340dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="362dp" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnNext"
+        app:layout_constraintTop_toBottomOf="@id/btnSearch" />
+
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="Next"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
