MVVM model struct

--- a/app/src/main/res/layout/fragment_book_test_ride.xml
+++ b/app/src/main/res/layout/fragment_book_test_ride.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".BookTestRideFragment">
+    tools:context=".ui.service.BookTestRideFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
