--- a/app/src/main/res/layout/fragment_bike_detail.xml
+++ b/app/src/main/res/layout/fragment_bike_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BikeDetailFragment">
+    tools:context=".ui.bike.BikeDetailFragment">
 
     <ImageView
         android:id="@+id/bike_image"
