--- a/app/src/main/res/layout/fragment_bikes.xml
+++ b/app/src/main/res/layout/fragment_bikes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BikesFragment">
+    tools:context=".ui.shop.BikesFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
