--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
-    tools:context=".OnboardingFragment1">
+    tools:context=".ui.onboarding.OnboardingFragment1">
 
     <ImageView
         android:id="@+id/ivLogo"
