--- a/app/src/main/res/layout/fragment_service_package.xml
+++ b/app/src/main/res/layout/fragment_service_package.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
-    tools:context=".ServicePackageFragment">
+    tools:context=".ui.service.ServicePackageFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
