--- a/app/src/main/res/layout/item_bike.xml
+++ b/app/src/main/res/layout/item_bike.xml
@@ -1,5 +1,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cvBikes"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -15,41 +17,41 @@
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:src="@drawable/ic_bike_placeholder"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_heart"
-            app:layout_constraintTop_toTopOf="@id/bike_image"
-            app:layout_constraintEnd_toEndOf="@id/bike_image"/>
+            app:layout_constraintEnd_toEndOf="@id/bike_image"
+            app:layout_constraintTop_toTopOf="@id/bike_image" />
 
         <TextView
             android:id="@+id/bike_make"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HONDA"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bike_image"
-            app:layout_constraintStart_toStartOf="parent"/>
+            tools:text="name" />
 
         <TextView
             android:id="@+id/bike_model"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PCX125"
+            android:text="model"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            app:layout_constraintTop_toBottomOf="@id/bike_make"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bike_make" />
 
         <TextView
             android:id="@+id/bike_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="52$ / week"
-            app:layout_constraintTop_toBottomOf="@id/bike_model"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:text="price"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bike_model" />
 
         <TextView
             android:id="@+id/bike_rating"
@@ -57,8 +59,8 @@
             android:layout_height="wrap_content"
             android:drawableStart="@android:drawable/star_on"
             android:text="4.2"
-            app:layout_constraintTop_toBottomOf="@id/bike_model"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bike_model" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
